--- a/Boostrap/hands on/document model/index.html
+++ b/Boostrap/hands on/document model/index.html
@@ -19,10 +19,50 @@
 </head>
 
 <body>
+    <!-- <input type="button" id="btn" value="Click">
     <main class="container">
         <h1>Todo List</h1>
 
-    </main>
+    </main> -->
+
+    <div class="container">
+        <h2>Form control</h2>
+        <form id="myForm">
+            <div class="checkbox">
+                <label><input type="checkbox" value="Option 1">Option 1</label>
+            </div>
+            <div class="checkbox">
+                <label><input type="checkbox" value="Option 2">Option 2</label>
+            </div>
+            <div class="checkbox">
+                <label><input type="checkbox" value="Option 3">Option 3</label>
+            </div>
+
+            <div class="radio">
+                <label><input type="radio" name="optradio">Option 1</label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" name="optradio">Option 2</label>
+            </div>
+            <div class="radio">
+                <label><input type="radio" name="optradio">Option 3</label>
+            </div>
+
+            <div class="form-group">
+                <label for="sel1">Select list:</label>
+                <select class="form-control col-3" id="sel1">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                </select>
+            </div>
+        </form>
+    </div>
+
+    <div>
+        <p class="data"></p>
+    </div>
 
 
     <!-- Optional JavaScript -->
